[package]
name = "jukebox"
version = "0.1.0"
edition = "2021"
rustc-link-search = ["./target/"]
rustc-link-lib = ["test"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "*"
shellexpand = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
rand = "*"
gpio = "*"
gpiod = "0.2.3"
[build-dependencies]
cc = "*"
